# mrpmony

./: .gitignore  OPEN_SOURCE_RELEASE_STATUS.md  README.md  SETUP.md  THIRD_PARTY_NOTICES.md  build-profile.json5  build-profile.json5.example  hvigorw  hvigorw.bat  local.properties.example  oh-package.json5
AppScope/: app.json5
docs/architecture/: ARCHITECTURE_V1.md
docs/harmonyos/: HARMONYOS_TECH_ROUTE_V1.md  HOS-001_POC_FILE_SKELETON_V1.md  HOS-002_MIN_NAPI_FACADE_V0.md  HOS-003_WEEK1_BREAKPOINTS_V1.md  HOS-004_CODE_SKELETON_SAMPLES_V1.md  HOS-005_INTERFACE_FREEZE_AND_VALIDATION_TEMPLATE_V1.md  HOS-006_WEEK1_EXECUTION_CHECKLIST_V1.md  HOS-007_WEEK2_INTEGRATION_PREREQUISITES_V1.md
docs/product/: ARKTS_IMPORT_LIST_REFRESH_PROGRESS_V0.md  ARKTS_MOCK_FLOW_PROGRESS_V0.md  ARKTS_NATIVE_BOUNDARY_LIST_V0.md  ARKTS_PAGE_ACTION_WIRING_PROGRESS_V0.md  ARKTS_PAGE_COMPOSITION_PROGRESS_V0.md  ARKTS_ROUTE_PLACEHOLDER_FLOW_V0.md  ARKTS_RUNTIME_IMPORT_RESET_PROGRESS_V0.md  ARKTS_SHELL_CODE_SKELETON_V0.md  ARKTS_SHELL_CONTRACTS_V0.md  ARKTS_SHELL_DEMO_CLOSURE_V1.md  ARKTS_SHELL_POC_STRUCTURE_FINAL.md  ARKTS_STATE_MANAGEMENT_RULES_V1.md  ARKTS_STORE_REACTIVE_LINK_V0.md  FEATURE_ROADMAP_V1.md  HARMONYOS_APPGALLERY_RELEASE_STRATEGY_V1.md  HARMONYOS_V1_BASIC_FUNCTIONS_STATUS.md  HDS_NAVIGATION_IMPLEMENTATION_PLAN_V1.md  HOME_REDESIGN_V2_SPEC.md  HOME_REDESIGN_V3_LIQUID_KEYPHONE_SPEC.md  MVP_SCOPE.md  PRODUCT_FUNCTION_MATRIX_V1.md  PRODUCT_MONETIZATION_PLAN_V1.md  PRODUCT_UI_DECISIONS_LOCKED_V1.md  PRODUCT_UI_UX_DESIGN_V1.md  UI_IMPLEMENTATION_SPEC_V1.md  UI_SCREEN_INTERACTION_SPEC_V1.md  UI_STYLE_DIRECTION_HDS_LIQUID_GLASS.md  UI_VISUAL_SYSTEM_V1.md
docs/project/: AGENT_CHAIN.md  CORE_EXECUTION_BACKLOG.md  NEXT_ACTIONS.md  PROJECT_OVERVIEW.md  TEAM_TASKS_ROUND1.md
docs/runtime/: BUILD_INSTALL_RUNBOOK.md  COMPATIBILITY_TEST_PLAN.md  CURRENT_ALPHA_STATUS.md  NATIVE_RUNTIME_ARCHITECTURE.md  NEXT_RUNTIME_WORK.md  PURE_MRP_SELF_IMPLEMENTATION_RESEARCH_V1.md
entry/: build-profile.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt
entry/src/main/cpp/experimental/mrpoid2018/: Mrpoid2018Backend.cpp  Mrpoid2018Backend.h  PORTING_NOTES.md  README.md
entry/src/main/cpp/experimental/mrpoid2018/origin/mr/: mr_encode.h  mrporting.h  mythroad.c  mythroad_mini.c
entry/src/main/cpp/experimental/mrpoid2018/origin/mr/include/: mr.h  mr_conf.h
entry/src/main/cpp/experimental/mrpoid2018/origin/mythroad/: mr_mem.c  mr_types.h
entry/src/main/cpp/input/: InputDispatcher.cpp  InputEvent.h
entry/src/main/cpp/napi/: facade_binding.cpp  module_init.cpp
entry/src/main/cpp/platform/: MrpFacade.cpp  MrpFacade.h
entry/src/main/cpp/render/: FrameBuffer.cpp  FrameBuffer.h
entry/src/main/cpp/runtime/: MrpAudioBridge.cpp  MrpAudioBridge.h  MrpRuntime.cpp  MrpRuntime.h  VmrpHostBridge.cpp  VmrpHostBridge.h  XComponentSurfaceRenderer.cpp  XComponentSurfaceRenderer.h
entry/src/main/ets/: libmrp_napi.d.ts
entry/src/main/ets/adapters/: NativeAppAdapter.ts  NativeImportAdapter.ts  NativeRuntimeAdapter.ts  NativeSmokeTest.ts  RuntimeAssetBootstrap.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/models/: AppItemVM.ts  PackagePreviewVM.ts  RuntimeSessionState.ts  UiError.ts
entry/src/main/ets/pages/: AboutPage.ets  AddGroupPage.ets  AppListPage.ets  AppManagePage.ets  ImportPage.ets  RecentRunPage.ets  RunPage.ets  SettingsPage.ets  ShellRootPage.ets  WebPage.ets
hvigor/: hvigor-config.json5
prototypes/: README.md
research/: OPEN_SOURCE_SURVEY_2026-03-09.md  README.md
screenshots/: README.md
scripts/: README.md  check-init-env.sh
(+30 files in other folders)
